# renpy-gui-mcp

./: .gitignore  .mcp.example.hermes.yaml  .mcp.example.json  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MEDIA.md  PLAN.md  QUICKSTART.md  README.md  ROADMAP.md  llms.txt  pyproject.toml
.claude/: HANDOFF.md
.claude/hooks/: session-start.sh
games/lighthouse_keeper/game/: script.rpy
games/lighthouse_selkie/game/: script.rpy
games/midnight_case/game/: script.rpy
gui/: dev.sh  launch.sh  run.sh
gui/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gui/frontend/src/: App.tsx  index.css  main.tsx  theme.css
scripts/: integration_drive.py  real_vn_drive.py  smoke_test.py
src/renpy_mcp/: __init__.py  __main__.py  config.py  sdk.py  server.py
src/renpy_mcp/guardrails/: dialogue.py  indent.py  labels.py  reserved.py
src/renpy_mcp/project/: asset_refs.py  canvas.py  composers.py  diagnostics.py  label_tree.py  lint_parse.py  media.py  recent.py  scaffold.py  scaffold_health.py  scaffold_status.py  scanner.py  sdk_fetch.py  translations.py  writer.py
tests/: conftest.py  test_gui_backend.py  test_launcher.py  test_lifecycle.py  test_lint_parse.py  test_phase0.py  test_phase1a.py  test_phase1b.py  test_phase1c.py  test_phase3b.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_print_config.py  test_registry.py  test_scaffold.py  test_scaffold_health.py  test_scaffold_status.py  test_sdk_fetch.py  test_tier1.py  test_tier2.py  test_tier3.py  test_tier4.py
(+46 files in other folders)
