[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renpy-mcp"
version = "0.1.0"
description = "MCP server exposing Ren'Py visual novel development as structured tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["mcp", "renpy", "visual-novel", "agent", "tooling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "unidiff>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
gui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "watchdog>=4.0",
    "httpx>=0.27",
]

[project.scripts]
renpy-mcp = "renpy_mcp.__main__:main"
renpy-mcp-gui = "renpy_mcp_gui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/renpy_mcp", "gui/backend/src/renpy_mcp_gui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
